<resources>
    <string name="app_name">Output Calculator</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="my_name">Tarkeshwar Roy</string>
    <string name="my_number">9883293901</string>
    <string name="save_Contact">Save</string>
    <string name="next_for_validate">Next</string>
    <string name="save_contact">Save</string>
    <string name="next_validate">Next</string>
    <string name="note">"नोट:-यह ऐप्प बिलकुल मुफ्त है। इस ऐप्प को चालू करने के लिए आपको activation code की आवश्यक्ता  होगी। उसे पाने के लिए नीचे वाले नंबर को Tarkeshwar Roy Whatsapp no- 9883293901 पर भेज दीजिये।</string>
    <string name="btvalidate">Validate</string>
    <string name="back_contact">Back</string>
    <string name="put_code_here">put code here</string>
    <string name="request_code">Request code</string>
    <string name="rate_chart">Rate chart</string>
    <string name="norms">Norms</string>
    <string name="update">Update</string>
    <string name="about">About</string>
    <string name="slab_1">Slab 1</string>
    <string name="slab_2">Slab 2</string>
    <string name="slab_3">Slab 3</string>
    <string name="above_slab">Above Slab</string>
    <string name="basic">Basic</string>
    <string name="d_a">D A %</string>
    <string name="h_r_a">H R A%</string>
    <string name="days">Days</string>
    <string name="next">NEXT</string>
    <string name="save">SAVE</string>
    <string name="id">1</string>
    <string name="d_a1">D . A:</string>
    <string name="h_r_a1">H R A:</string>
    <string name="per_day0">Per Day:</string>
    <string name="per_bag1">Per Bag</string>
    <string name="per_bag">Per Bag:</string>
    <string name="per_day">Per Day:</string>
    <string name="per_day1">Per Day</string>
    <string name="basic1">Basic:</string>
    <string name="old_basic1">Old Basic</string>
    <string name="d_a0">D . A:</string>
    <string name="basic0">Basic:</string>
    <string name="h_r_a0">H R A:</string>
    <string name="old_d_a">Old D A%</string>
    <string name="time">TextView</string>
    <string name="time1">TextView</string>
    <string name="h_r_a2">H R A</string>
    <string name="_11_12">11--12</string>
    <string name="_13_14">13--14</string>
    <string name="_15_16">15--16</string>
    <string name="_17_18">17--18</string>
    <string name="_19_avobe"><![CDATA[19 & Avobe]]></string>
    <string name="incentive">Incentive:</string>
    <string name="over_time">O T:</string>
    <string name="height">Height :-</string>
    <string name="lead">Lead :-</string>
    <string name="_67_99">67\'--99\'</string>
    <string name="_100_132">100\'--132\'</string>
    <string name="_133_165">133\'--165\'</string>
    <string name="avove_165">Avove 165\'</string>
    <string name="calculate">Calculate</string>
    <string name="net_bags">Net Bags :</string>
    <string name="over_time_bags">Over Time Bags</string>
    <string name="whole_day_bags">Whole Day Bags</string>
    <string name="bags_head">Bags/ Head :</string>
    <string name="new_d_a">New D A%</string>
    <string name="new_basic">New Basic</string>
    <string name="new_hra">New HRA%</string>
    <string name="old_basic">Old basic</string>
    <string name="old_d_a_a">Old D . A %</string>
    <string name="shed_to_wagon">Shed To Wagon</string>
    <string name="truck_unloading">Truck Unloading</string>
    <string name="wagon_unloading">Wagon Unloading</string>
    <string name="wagon_to_pf">Wagon to PF</string>
    <string name="pf_to_shed">PF To Shed</string>
    <string name="truck_loading">Truck Loading</string>
    <string name="truck_pf_truck">Truck_PF_Truck</string>
    <string name="wagon_to_truck">Wagon To Truck</string>
    <string name="refilling">Refilling</string>
    <string name="restacking">Restacking</string>
    <string name="weighment">Weighment</string>
    <string name="_5_30_pm">5:30 PM</string>
    <string name="start">Start:</string>
    <string name="date">Date:</string>
    <string name="shed_no">Shed No:</string>
    <string name="end">End:</string>
    <string name="heads">Heads</string>
    <string name="bags">Bags</string>
    <string name="over_timee">Over Time</string>
    <string name="tooge" />
    <string name="toogg" />
    <string name="after_norm">After Norm :</string>
    <string name="after_ot_norm">After OT Norm :</string>
    <string name="slab_bags">Slab Bags</string>
    <string name="incentivee">Incentive</string>
    <string name="slab_bagss">Slab Bags</string>
    <string name="ot_incentive">OT Incentive</string>
    <string name="all_slab">-: All Slab :-</string>
    <string name="above_slabb">Above Slab</string>
    <string name="total">Total :</string>
    <string name="heightt">Height :</string>
    <string name="leadd">Lead :</string>


</resources>